--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMPM 121 - Final Game</title>
+    <link rel="stylesheet" type="text/css" href="src/style.css">
     <script src="lib/phaser.js"></script>
-    <script src="src/scenes/main.js"></script>
+    <script src="src/scenes/Load.js"></script>
+    <script src="src/scenes/Keys.js"></script>
+    <script src="src/scenes/Play.js"></script>
+    <script src="src/main.js"></script>
 </head>
 <body>
     
