Player Movement and End turn Button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <script src="src/main.js"></script>
 </head>
 <body>
-    
+    <button id="endTurnButton">End Turn</button>
 </body>
 </html>
