--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <script src="lib/phaser.js"></script>
     <script src="src/prefabs/Grid.js"></script>
+    <script src="src/prefabs/Player.js"></script>
     <script src="src/scenes/Load.js"></script>
     <script src="src/scenes/Keys.js"></script>
     <script src="src/scenes/Play.js"></script>
