Implemented basic resource and building purchasing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,13 @@
     <script src="src/scenes/Play.js"></script>
     <script src="src/main.js"></script>
 </head>
+
 <body>
     <button id="endTurnButton">End Turn</button>
+    <button id="buyDrillButton">Buy Drill</button>
+    <button id="buyExcavatorButton">Buy Excavator</button>
+    <button id="buyDemolitionPlantButton">Buy Demolition Plant</button>
+    <div id="resourceDisplay">Resources: 100</div>
 </body>
+
 </html>
