--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <script src="src/main.js"></script>
 </head>
 <body>
-    <button id="endTurnButton">End Turn</button>
+    <div id="title">
+        <h1>Mining Simulator</h1>
+    </div>
+    <div id="game-container">
+        
+    </div>
+    <div id="button-container">
+        <button id="endTurnButton">End Turn</button>
+    </div>
 </body>
 </html>
