--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <div id="title">
         <h1>Mining Simulator</h1>
     </div>
-    <div id="game-container">
-        
-    </div>
+    <div id="game-container"></div>
     <div id="button-container">
         <button id="endTurnButton">End Turn</button>
     </div>
