initial stats display

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <script src="lib/phaser.js"></script>
     <script src="src/prefabs/Grid.js"></script>
+    <script src="src/prefabs/Stats.js"></script>
     <script src="src/prefabs/Buildings.js"></script>
     <script src="src/prefabs/Player.js"></script>
     <script src="src/scenes/Load.js"></script>
