--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMPM 121 - Final Game</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <script src="lib/phaser.js"></script>
+    <script src="src/prefabs/Grid.js"></script>
+    <script src="src/prefabs/Buildings.js"></script>
+    <script src="src/prefabs/Player.js"></script>
     <script src="src/scenes/Load.js"></script>
     <script src="src/scenes/Keys.js"></script>
     <script src="src/scenes/Play.js"></script>
     <script src="src/main.js"></script>
 </head>
+
 <body>
     <button id="endTurnButton">End Turn</button>
+    <button id="buyDrillButton">Buy Drill</button>
+    <button id="buyExcavatorButton">Buy Excavator</button>
+    <button id="buyDemolitionPlantButton">Buy Demolition Plant</button>
 </body>
+
 </html>
