cleaned up code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CMPM 121 - Final Game</title>
     <link rel="stylesheet" type="text/css" href="src/style.css">
     <script src="lib/phaser.js"></script>
+    <script src="src/prefabs/Cell.js"></script>
     <script src="src/prefabs/Grid.js"></script>
     <script src="src/prefabs/Stats.js"></script>
     <script src="src/prefabs/Buildings.js"></script>
