--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="src/prefabs/Cell.js"></script>
     <script src="src/prefabs/Grid.js"></script>
     <script src="src/prefabs/Stats.js"></script>
-    <script src="src/prefabs/Buildings.js"></script>
+    <script src="src/prefabs/Building.js"></script>
     <script src="src/prefabs/Player.js"></script>
     <script src="src/scenes/Load.js"></script>
     <script src="src/scenes/Keys.js"></script>
