updated html structure

--- a/index.html
+++ b/index.html
@@ -23,13 +23,22 @@
         <h1>Mining Simulator</h1>
     </div>
     <div id="game-container"></div>
-    <div id="button-container">
-        <button id="endTurnButton">End Turn</button>
-        <button id="buyDrillButton">Buy Drill</button>
-        <button id="buyExcavatorButton">Buy Excavator</button>
-        <button id="buyDemolitionPlantButton">Buy Demolition Plant</button>
+    <div id="info-panel">
+        <div id="info-panel-left">
+            <h2>(TBD)</h2>
+        </div>
+        <div id="info-panel-middle">
+            <h2>Player Stats</h2>
+            <div id="resourceDisplay">Resources: 100</div>
+        </div>
+        <div id="info-panel-right">
+            <h2>Actions</h2>
+            <button id="buyDrillButton">Buy Drill</button>
+            <button id="buyExcavatorButton">Buy Excavator</button>
+            <button id="buyDemolitionPlantButton">Buy Demolition Plant</button>
+            <button id="nextRoundButton">Start Next Round</button>
+        </div>
     </div>
-    <div id="resourceDisplay">Resources: 100</div>
 </body>
 
 </html>
