--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="src/scenes/Load.js"></script>
     <script src="src/scenes/Keys.js"></script>
     <script src="src/scenes/Play.js"></script>
+    <script src="src/scenes/Win.js"></script>
     <script src="src/main.js"></script>
 </head>
 
