Added A goal indicator at the bottom

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="phaser-game"></div>
         <div id="info-panel">
             <div id="info-panel-left">
-                <h2>(TBD)</h2>
+                <h2>Collect<br>1000 Resources<br>to Win!</h2>
             </div>
             <div id="info-panel-middle">
                 <h2>Player Stats</h2>
