Updated resource display with more stats

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div id="info-panel-middle">
                 <h2>Player Stats</h2>
-                <div id="resourceDisplay">Resources: 100</div>
+                <div id="resourceDisplay">Resources: 100<br>Turns: 0<br>Buildings Placed: 0</div>
             </div>
             <div id="info-panel-right">
                 <h2>Actions</h2>
