--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="src/prefabs/Stats.js"></script>
     <script src="src/prefabs/Building.js"></script>
     <script src="src/prefabs/Player.js"></script>
+    <script src="src/prefabs/ButtonManager.js"></script>
     <script src="src/scenes/Load.js"></script>
     <script src="src/scenes/Keys.js"></script>
     <script src="src/scenes/Play.js"></script>
