--- a/index.html
+++ b/index.html
@@ -23,23 +23,26 @@
 <body>
     <div id="title">
         <h1>Mining Simulator</h1>
+        <h3>Collect 1000 resources to win!</h3>
     </div>
     <div id="game-container">
         <div id="phaser-game"></div>
         <div id="info-panel">
             <div id="info-panel-left">
-                <h2>Collect<br>1000 Resources<br>to Win!</h2>
-            </div>
-            <div id="info-panel-middle">
                 <h2>Player Stats</h2>
                 <div id="resourceDisplay">Resources: 100<br>Turns: 0<br>Buildings Placed: 0</div>
             </div>
-            <div id="info-panel-right">
+            <div id="info-panel-middle">
                 <h2>Actions</h2>
                 <button id="buyDrillButton">Buy Drill</button>
                 <button id="buyExcavatorButton">Buy Excavator</button>
                 <button id="buyDemolitionPlantButton">Buy Demolition Plant</button>
                 <button id="nextRoundButton">Start Next Round</button>
+            </div>
+            <div id="info-panel-right">
+                <h2>Action Log</h2>
+                <button id="undoButton">Undo</button>
+                <button id="redoButton">Redo</button>
             </div>
         </div>
     </div>
