--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <div id="info-panel">
         <div id="info-panel-left">
           <h2>Collect<br />1000 Resources<br />to Win!</h2>
-          <button id="save">Save</button>
-          <button id="load">Load</button>
+          <button id="saveButton">Save</button>
+          <button id="loadButton">Load</button>
           <button id="saveFile0" class="hidden">File 1</button>
           <button id="saveFile1" class="hidden">File 2</button>
           <button id="saveFile2" class="hidden">File 3</button
