--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="src/prefabs/Stats.js"></script>
     <script src="src/prefabs/Building.js"></script>
     <script src="src/prefabs/Player.js"></script>
-    <script src="src/prefabs/Save.js"></script>
+    <script src="src/prefabs/GameState.js"></script>
     <script src="src/prefabs/ButtonManager.js"></script>
     <script src="src/scenes/Load.js"></script>
     <script src="src/scenes/Keys.js"></script>
