refactored button manager to adopt a state approach

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
           <h2>Collect<br />1000 Resources<br />to Win!</h2>
           <button id="saveButton">Save</button>
           <button id="loadButton">Load</button>
-          <button id="saveFile0" class="hidden">File 1</button>
-          <button id="saveFile1" class="hidden">File 2</button>
-          <button id="saveFile2" class="hidden">File 3</button
-          ><button id="loadFile0" class="hidden">File 1</button>
-          <button id="loadFile1" class="hidden">File 2</button>
-          <button id="loadFile2" class="hidden">File 3</button>
+          <button id="saveSlot0">File 1</button>
+          <button id="saveSlot1">File 2</button>
+          <button id="saveSlot2">File 3</button>
+          <button id="loadSlot0">File 1</button>
+          <button id="loadSlot1">File 2</button>
+          <button id="loadSlot2">File 3</button>
+          <button id="exitButton">Back</button>
         </div>
         <div id="info-panel-middle">
           <h2>Player Stats</h2>
