stats correctly displays cell

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div id="info-panel-middle">
           <h2>Player Stats</h2>
-          <div id="resourceDisplay">
+          <div id="playerDisplay">
             Resources: 100<br />Turns: 0<br />Buildings Placed: 0
           </div>
         </div>
