initial undo/redo update

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <button id="loadSlot1">File 2</button>
           <button id="loadSlot2">File 3</button>
           <button id="exitButton">Back</button>
+          <button id="undoButton">Undo</button>
+          <button id="redoButton">Redo</button>
         </div>
         <div id="info-panel-middle">
           <h2>Player Stats</h2>
