--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <title>CMPM 121 - Final Game</title>
     <link rel="stylesheet" type="text/css" href="src/style.css" />
     <script src="lib/phaser.js"></script>
-    <script src="src/prefabs/Cell.js"></script>
-    <script src="src/prefabs/Grid.js"></script>
-    <script src="src/prefabs/Stats.js"></script>
-    <script src="src/prefabs/Player.js"></script>
-    <script src="src/prefabs/GameState.js"></script>
-    <script src="src/prefabs/ButtonManager.js"></script>
-    <script src="src/scenes/Load.js"></script>
-    <script src="src/scenes/Keys.js"></script>
-    <script src="src/scenes/Play.js"></script>
-    <script src="src/scenes/Win.js"></script>
-    <script src="src/main.js"></script>
+    <script src="src/prefabs/Cell.ts"></script>
+    <script src="src/prefabs/Grid.ts"></script>
+    <script src="src/prefabs/Stats.ts"></script>
+    <script src="src/prefabs/Player.ts"></script>
+    <script src="src/prefabs/GameState.ts"></script>
+    <script src="src/prefabs/ButtonManager.ts"></script>
+    <script src="src/scenes/Load.ts"></script>
+    <script src="src/scenes/Keys.ts"></script>
+    <script src="src/scenes/Play.ts"></script>
+    <script src="src/scenes/Win.ts"></script>
+    <script src="src/main.ts"></script>
   </head>
 
   <body>
