--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CMPM 121 - Final Game</title>
+  <title data-translate="title">Mining Simulator</title>
   <link rel="stylesheet" type="text/css" href="src/style.css" />
   <script src="lib/phaser.js"></script>
   <script src="dist/bundle.js"></script>
@@ -12,37 +12,44 @@
 
 <body>
   <div id="title">
-    <h1>Mining Simulator</h1>
+    <h1 data-translate="title">Mining Simulator</h1>
+  </div>
+  <div id="language-buttons">
+    <button id="lang-en">English</button>
+    <button id="lang-ar">Arabic</button>
+    <button id="lang-zh">Chinese</button>
   </div>
   <div id="game-container">
     <div id="phaser-game"></div>
     <div id="info-panel">
       <div id="info-panel-left">
-        <h2>Collect<br />1000 Resources<br />to Win!</h2>
-        <button id="saveButton">Save</button>
-        <button id="loadButton">Load</button>
-        <button id="saveSlot1">File 1</button>
-        <button id="saveSlot2">File 2</button>
-        <button id="saveSlot3">File 3</button>
-        <button id="loadSlot1">File 1</button>
-        <button id="loadSlot2">File 2</button>
-        <button id="loadSlot3">File 3</button>
-        <button id="exitButton">Back</button>
-        <button id="undoButton">Undo</button>
-        <button id="redoButton">Redo</button>
+        <h2 data-translate="collectGoal">Collect<br />1000 Resources<br />to Win!</h2>
+        <button id="saveButton" data-translate="save">Save</button>
+        <button id="loadButton" data-translate="load">Load</button>
+        <button id="saveSlot1" data-translate="file">File 1</button>
+        <button id="saveSlot2" data-translate="file">File 2</button>
+        <button id="saveSlot3" data-translate="file">File 3</button>
+        <button id="loadSlot1" data-translate="file">File 1</button>
+        <button id="loadSlot2" data-translate="file">File 2</button>
+        <button id="loadSlot3" data-translate="file">File 3</button>
+        <button id="exitButton" data-translate="back">Back</button>
+        <button id="undoButton" data-translate="undo">Undo</button>
+        <button id="redoButton" data-translate="redo">Redo</button>
       </div>
       <div id="info-panel-middle">
-        <h2>Player Stats</h2>
+        <h2 data-translate="playerStats">Player Stats</h2>
         <div id="playerDisplay">
-          Resources: 100<br />Turns: 0<br />Buildings Placed: 0
+          <span data-translate="resources">Resources</span>: 100<br />
+          <span data-translate="turns">Turns</span>: 0<br />
+          <span data-translate="buildingsPlaced">Buildings Placed</span>: 0
         </div>
       </div>
       <div id="info-panel-right">
-        <h2>Actions</h2>
-        <button id="buyDrillButton">Buy Drill</button>
-        <button id="buyExcavatorButton">Buy Excavator</button>
-        <button id="buyDemolitionPlantButton">Buy Demolition Plant</button>
-        <button id="nextRoundButton">Start Next Round</button>
+        <h2 data-translate="actions">Actions</h2>
+        <button id="buyDrillButton" data-translate="buyDrill">Buy Drill</button>
+        <button id="buyExcavatorButton" data-translate="buyExcavator">Buy Excavator</button>
+        <button id="buyDemolitionPlantButton" data-translate="buyDemolitionPlant">Buy Demolition Plant</button>
+        <button id="nextRoundButton" data-translate="startNextRound">Start Next Round</button>
       </div>
     </div>
   </div>
