Implemented victory condition and growthrule into scenerio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="phaser-game"></div>
     <div id="info-panel">
       <div id="info-panel-left">
-        <h2 data-translate="collectGoal">Collect<br />1000 Resources<br />to Win!</h2>
+        <h2 id="victoryCondition" data-translate="collectGoal">Collect<br />1000 Resources<br />to Win!</h2>
         <button id="saveButton" data-translate="save">Save</button>
         <button id="loadButton" data-translate="load">Load</button>
         <button id="saveSlot1" data-translate="file">File 1</button>
