Added More language translation on buttons

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1 data-translate="title">Mining Simulator</h1>
   </div>
   <div id="language-buttons">
-    <button id="lang-en">English</button>
-    <button id="lang-ar">Arabic</button>
-    <button id="lang-zh">Chinese</button>
+    <button id="lang-en" data-translate="langEn">English</button>
+    <button id="lang-ar" data-translate="langAr">Arabic</button>
+    <button id="lang-zh" data-translate="langZh">Chinese</button>
   </div>
   <div id="game-container">
     <div id="phaser-game"></div>
