--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-translate="title">Mining Simulator</title>
   <link rel="stylesheet" type="text/css" href="src/style.css" />
+  <link rel="manifest" href="manifest.json" />
+  <link rel="apple-touch-icon" href="./assets/demo3.png" />
   <script src="lib/phaser.js"></script>
   <script src="dist/bundle.js"></script>
 </head>
