--- a/mining-sim/index.html
+++ b/mining-sim/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-translate="title">Mining Simulator</title>
   <link rel="stylesheet" type="text/css" href="src/style.css" />
-  <script src="lib/phaser.js"></script>
-  <script src="dist/bundle.js"></script>
+  <script type="module" src="/src/main.ts"></script>
 </head>
 
 <body>
