Fixed file numbers

--- a/mining-sim/index.html
+++ b/mining-sim/index.html
@@ -25,12 +25,12 @@
         <h2 id="victoryCondition" data-translate="collectGoal">Collect<br />1000 Resources<br />to Win!</h2>
         <button id="saveButton" data-translate="save">Save</button>
         <button id="loadButton" data-translate="load">Load</button>
-        <button id="saveSlot1" data-translate="file">File 1</button>
-        <button id="saveSlot2" data-translate="file">File 2</button>
-        <button id="saveSlot3" data-translate="file">File 3</button>
-        <button id="loadSlot1" data-translate="file">File 1</button>
-        <button id="loadSlot2" data-translate="file">File 2</button>
-        <button id="loadSlot3" data-translate="file">File 3</button>
+        <button id="saveSlot1" data-translate="file1">File 1</button>
+        <button id="saveSlot2" data-translate="file2">File 2</button>
+        <button id="saveSlot3" data-translate="file3">File 3</button>
+        <button id="loadSlot1" data-translate="file1">File 1</button>
+        <button id="loadSlot2" data-translate="file2">File 2</button>
+        <button id="loadSlot3" data-translate="file3">File 3</button>
         <button id="exitButton" data-translate="back">Back</button>
         <button id="undoButton" data-translate="undo">Undo</button>
         <button id="redoButton" data-translate="redo">Redo</button>
