--- a/mining-sim/index.html
+++ b/mining-sim/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-translate="title">Mining Simulator</title>
+  <link rel="manifest" href="/mining-sim/manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="/mining-sim/assets/demo3.png" />
   <link rel="stylesheet" type="text/css" href="src/style.css" />
   <script type="module" src="/src/main.ts"></script>
 </head>
