--- a/mining-sim/index.html
+++ b/mining-sim/index.html
@@ -7,7 +7,7 @@
   <title data-translate="title">Mining Simulator</title>
   <link rel="stylesheet" type="text/css" href="src/style.css" />
 
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="manifest" href="manifest.webmanifest" />
   <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
   
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
