--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="stylesheet" type="text/css" href="src/style.css" />
   <link rel="manifest" href="manifest.webmanifest" />
   
-  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" href="public/icons/apple-touch-icon.png" />
   
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
-  <link rel="shortcut icon" href="/icons/favicon.ico" /> 
+  <link rel="icon" type="image/png" sizes="32x32" href="public/icons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="public/icons/favicon-16x16.png" />
+  <link rel="shortcut icon" href="public/icons/favicon.ico" /> 
   
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="src/main.ts"></script>
 </head>
 
 <body>
