--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   
   <link rel="icon" type="image/png" sizes="32x32" href="public/icons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="public/icons/favicon-16x16.png" />
-  <link rel="shortcut icon" href="public/icons/favicon.ico" /> 
+  <link rel="shortcut icon" href="public/icons/favicon.ico" />
+  
+  <link rel="icon" type="image/png" sizes="192x192" href="public/icons/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="public/icons/android-chrome-512x512.png" />
   
   <script type="module" src="src/main.ts"></script>
 </head>
