changed main extension

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-translate="title">Mining Simulator</title>
   <link rel="stylesheet" type="text/css" href="src/style.css" />
-  <script type="module" src="src/main.ts"></script>
+  <script type="module" src="src/main.js"></script>
   <link rel="manifest" href="manifest.webmanifest" />
   
   <link rel="apple-touch-icon" href="public/icons/apple-touch-icon.png" />
