--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <script type="module" src="src/main.js"></script>
   <link rel="manifest" href="manifest.webmanifest" />
   
-  <link rel="apple-touch-icon" href="public/icons/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="public/icons/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="public/icons/favicon-16x16.png" />
-  <link rel="shortcut icon" href="public/icons/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="192x192" href="public/icons/android-chrome-192x192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="public/icons/android-chrome-512x512.png" />
+  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/icons/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/icons/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/icons/android-chrome-512x512.png" />
   </head>
 
 <body>
