working manifest and app integration?

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title data-translate="title">Mining Simulator</title>
-  <link rel="manifest" href="/mining-sim/manifest.webmanifest" />
-  <link rel="apple-touch-icon" href="/mining-sim/assets/demo3.png" />
-  <link rel="stylesheet" type="text/css" href="src/style.css" />
+  <link rel="manifest" href="./manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
+  <link rel="stylesheet" type="text/css" href="./src/style.css" />
+  <link rel="icon" href="./favicon.ico" />
   <script type="module" src="/src/main.ts"></script>
 </head>
 
