Changed index to js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png" />
   <link rel="stylesheet" type="text/css" href="src/style.css" />
   <link rel="icon" href="favicon.ico" />
-  <script type="module" src="src/main.ts"></script>
+  <script type="module" src="src/main.js"></script>
 </head>
 
 <body>
